Refactored to std fastAPI project layout Added Redis for state persistence Added Docker containerization Added more tests

--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-    <h1>Schedule a Long-Running Task</h1>
+    <h1>Create a Task</h1>
     <label>Duration (seconds):</label><br>
     <input type="number" id="taskDuration" value="5"><br>
     <button onclick="createTask()">Create Task</button>
