--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -39,7 +39,7 @@
   </style>
 </head>
 <body>
-    <h1>Create a Task</h1>
+    <h1>Create Task</h1>
     <label>Duration (seconds):</label><br>
     <input type="number" id="taskDuration" value="5"><br>
     <button onclick="createTask()">Create Task</button>
