--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -111,7 +111,7 @@
   <script>
     document.getElementById("defaultOpen").click();
 
-    function openTab(evt, cityName) {
+    function openTab(evt, tName) {
       // Declare all variables
       var i, tabcontent, tablinks;
 
@@ -128,7 +128,7 @@
       }
 
       // Show the current tab, and add an "active" class to the button that opened the tab
-      document.getElementById(cityName).style.display = "block";
+      document.getElementById(tName).style.display = "block";
       evt.currentTarget.className += " active";
     }
 
